# soler

./: Cargo.toml  README-zh_CN.md  README.md
.github/workflows/: loc.yml
lexsol/: Cargo.toml  README.md
lexsol/src/: error.rs  lib.rs  sol.rs  string_lexer.rs  ty.rs  types.rs  utils.rs  yul.rs
lexsol/src/error/: decimal_number.rs  escape_sequence.rs  hex_number.rs  hex_string.rs  sol.rs  string.rs  yul.rs
lexsol/src/handlers/: slice.rs  str.rs
lexsol/src/sol/: lossless.rs  syntactic.rs  ty.rs
lexsol/src/sol/handlers/: slice.rs  str.rs
lexsol/src/sol/lossless/: str.rs  token.rs
lexsol/src/sol/syntactic/: token.rs
lexsol/src/sol/ty/: denomination.rs  fixed_bytes.rs  int.rs  keywords.rs  reserved.rs  string.rs
lexsol/src/string_lexer/: hex.rs
lexsol/src/string_lexer/double/: bytes.rs  str.rs
lexsol/src/string_lexer/hex/: single.rs
lexsol/src/string_lexer/hex/double/: bytes.rs  str.rs
lexsol/src/string_lexer/hex/single/: bytes.rs  str.rs
lexsol/src/string_lexer/regular/double/: bytes.rs  str.rs
lexsol/src/string_lexer/regular/single/: bytes.rs  str.rs
lexsol/src/string_lexer/single/: bytes.rs  str.rs
lexsol/src/string_lexer/unicode/double/: bytes.rs  str.rs
lexsol/src/string_lexer/unicode/single/: bytes.rs  str.rs
lexsol/src/ty/: string.rs  uint.rs
lexsol/src/types/: keywords.rs  punct.rs
lexsol/src/yul/: lossless.rs  syntactic.rs
lexsol/src/yul/handlers/: slice.rs  str.rs
lexsol/src/yul/lossless/: token.rs
lexsol/src/yul/syntactic/: token.rs
lexyul/: Cargo.toml
lexyul/src/: error.rs  lib.rs  sol.rs  string_lexer.rs  types.rs  utils.rs  yul.rs
lexyul/src/error/: escape_sequence.rs  hex_string.rs  string.rs  yul.rs
lexyul/src/sol/: ty.rs
lexyul/src/sol/ty/: fixed.rs  fixed_bytes.rs  reserved.rs  string.rs  uint.rs
lexyul/src/string_lexer/: hex.rs
lexyul/src/string_lexer/double/: bytes.rs  str.rs
lexyul/src/string_lexer/hex/: single.rs
lexyul/src/string_lexer/hex/double/: bytes.rs  str.rs
lexyul/src/string_lexer/hex/single/: bytes.rs  str.rs
lexyul/src/string_lexer/single/: bytes.rs  str.rs
lexyul/src/yul/: error.rs  handlers.rs  lossless.rs  syntactic.rs
lexyul/src/yul/error/: string.rs
lexyul/src/yul/handlers/: slice.rs  str.rs
lexyul/src/yul/lossless/: bytes.rs  token.rs
lexyul/src/yul/syntactic/: token.rs
parsol/: Cargo.toml  README.md
parsol/src/: lib.rs
paryul/: Cargo.toml  README.md  RECOVERY_GUIDE.md
paryul/src/: ast.rs  error.rs  lib.rs  scaffold.rs  syntax.rs
paryul/src/ast/: assignment.rs  expression.rs  function_call.rs  function_name.rs  ident_list.rs  name.rs  path.rs  statement.rs  variable_declaration.rs  variable_name.rs
paryul/src/scaffold/: ast.rs
paryul/src/scaffold/ast/: expression.rs  function_call.rs  function_definition.rs  ident_list.rs  name.rs  path.rs  statement.rs  variable_definition.rs
paryul/src/scaffold/ast/statement/: assignment.rs  block.rs  for_statement.rs  function_call.rs  function_definition.rs  if_statement.rs  switch_statement.rs  variable_declaration.rs  variable_definition.rs
soler/: Cargo.toml  README.md
soler/src/: lib.rs
