[workspace]
resolver = "2"
members = [
  "lexyul",
  "lexsol",
  "soler",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
repository = "https://github.com/al8n/soler"
homepage = "https://github.com/al8n/soler"
documentation = "https://docs.rs/soler"
description = "A template for creating Rust open-source repo on GitHub"
license = "MIT OR Apache-2.0"
rust-version = "1.73"

[workspace.package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
paste = "1"
logos = { version = "0.15", default-features = false, features = ["export_derive"] }
logosky = { version = "0.3", default-features = false, path = "../logosky" }
thiserror = { version = "2", default-features = false }

[workspace.lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
] }

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false
