[package]
name = "lexyul"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/lexyul"
description = "Lexyul crate"

[features]
default = ["std"]
alloc = []
std = []

[dependencies]
logosky.workspace = true
paste = "1"

[lints]
workspace = true
