[package]
name = "parsol"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
license.workspace = true
rust-version.workspace = true
metadata.workspace = true

[features]
default = ["std", "evm"]
alloc = ["lexsol/alloc"]
std = ["lexsol/std"]

evm = ["lexsol/evm"]

[dependencies]
lexsol.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
