[package]
name = "paryul"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
license.workspace = true
rust-version.workspace = true
metadata.workspace = true

[features]
default = ["std", "evm"]
alloc = ["lexsol/alloc", "logosky/alloc"]
std = ["lexsol/std", "logosky/default"]

evm = ["lexsol/evm"]


[dependencies]
derive_more.workspace = true
lexsol = { workspace = true, features = ["yul"] }
logosky.workspace = true

[lints]
workspace = true
